--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Svr\\Core\\RawServiceProvider"
+                "Svr\\Core\\CoreServiceProvider"
             ]
         }
     },
