--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "autoload": {
         "psr-4": {
             "Svr\\Core\\": "src/",
-            "Database\\Seeders\\": "vendor/svr/core/database/seeders/"
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "extra": {
