--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Svr\\Core\\": "src/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Svr\\Core\\": "src/"
         }
     },
     "extra": {
