edit composer.js 1.0.14

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "autoload": {
         "psr-4": {
             "Svr\\Core\\": "src/"
-        }
+        },
+        "files": ["src/bootstrap.php"]
     },
     "extra": {
         "laravel": {
