Предрелиз SVR-CORE

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "Svr\\Core\\": "src/"
+            "Svr\\Core\\": "src/",
+            "Svr\\Core\\Seeders\\": "database/seeders/"
         },
         "files": ["src/bootstrap.php"]
     },
