--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "dedermus/open-admin-core": "^v2.0",
         "stefangabos/zebra_image": "^2.8",
         "hisorange/browser-detect": "^5.0",
-        "laravel/sanctum": "^4.0"
+        "laravel/sanctum": "^4.0",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0"
