--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,9 @@
         "dedermus/open-admin-core": "^v2.0",
         "stefangabos/zebra_image": "^2.8",
         "hisorange/browser-detect": "^5.0",
+        "irazasyed/telegram-bot-sdk": "^3.14",
         "laravel/sanctum": "^4.0",
+        "phpmailer/phpmailer": "^6.9",
         "ext-simplexml": "*"
     },
     "require-dev": {
